unpackaged/main/default/objects/litify_fin__lit_Field_Template__c/litify_fin__lit_Field_Template__c.object-meta.xml
<CustomObject>
    <description>Defines a field that is displayed for a given item, and what column that field is displayed under.</description>
    <label>Field Template</label>
    <nameField>
        <label>Field Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>