unpackaged/main/default/objects/litify_fin__lit_Field_Template__c/fields/litify_fin__lit_Column_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Column_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The column this field is displayed under.</description>
    <label>Column Template</label>
    <referenceTo>litify_fin__lit_Column_Template__c</referenceTo>
    <relationshipLabel>Field Templates</relationshipLabel>
    <relationshipName>Field_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>