unpackaged/main/default/objects/litify_fin__lit_Field_Template__c/fields/litify_fin__lit_Item_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Item_Template__c</fullName>
    <description>The item that this field is a part of.</description>
    <label>Item Template</label>
    <referenceTo>litify_fin__lit_Item_Template__c</referenceTo>
    <relationshipLabel>Field Templates</relationshipLabel>
    <relationshipName>Field_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>