unpackaged/main/default/objects/litify_fin__lit_Field_Template__c/fields/litify_fin__lit_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Order__c</fullName>
    <description>Formula field storing the ordering of this field in the group from the parent column.</description>
    <formula>litify_fin__lit_Column_Template__r.litify_fin__lit_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>