unpackaged/main/default/objects/litify_fin__lit_Field_Template__c/fields/litify_fin__lit_Sub_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Sub_Field_Name__c</fullName>
    <description>The API name of the sub-field, if one is to be displayed.</description>
    <label>Sub-Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>