unpackaged/main/default/objects/litify_fin__lit_Field_Template__c/fields/litify_fin__lit_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Type__c</fullName>
    <description>If this field is a currency, the type specifies if the value in this field is a credit or a debit to its respective subtotal.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>